2004-12-04  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* data/totem.glade: upd
	* src/bacon-video-widget-xine.c: (bacon_video_widget_can_set_zoom),
	(bacon_video_widget_set_zoom), (bacon_video_widget_get_zoom):
	* src/bacon-video-widget.h:
	* src/totem.c: (totem_action_zoom_relative),
	(totem_action_zoom_reset), (on_resize_1_2_activate),
	(on_resize_1_1_activate), (on_resize_2_1_activate),
	(on_zoom_in_activate), (on_zoom_reset_activate),
	(on_zoom_out_activate), (totem_action_handle_key),
	(totem_callback_connect): added zooming in the video with 'R' and 'T',
	and break GStreamer-backend compilation (Closes: #144929)

2004-12-03  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_unrealize):
	Send the XINE_GUI_SEND_WILL_DESTROY_DRAWABLE event when the video
	window is going to be destroyed

2004-12-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2004-12-03  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (xine_event): change the cursor to
	a hand when hovering a DVD menu (Closes: #160085)

2004-12-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (state_change):
	  GST_PAD_CAPS() will not work on ghostpads, which we're working on
	  here. So explicitely realize pad.

2004-12-03  Bastien Nocera  <hadess@hadess.net>

	* data/handlers.sh: add support for Winamp's uvox:// URLs

2004-12-01  Christophe Fergeau  <teuf@gnome.org>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_string): the year tag returns a
	guint, not a string.

2004-12-01  Bastien Nocera  <hadess@hadess.net>

	* configure.in: detect XVidModeExtension as well
	* src/Makefile.am: upd
	* src/bacon-resize.c: (bacon_resize_init), (bacon_resize),
	(bacon_restore):
	* src/bacon-resize.h:
	* src/bacon-video-widget-xine.c: (frame_output_cb),
	(bacon_video_widget_realize), (bacon_video_widget_set_fullscreen):
	Use XRandR and XVidModeExtension to get rid of the viewport when