@@ -1,3 +1,9 @@
+2004-12-04  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* src/bacon-video-widget-gst.c: (bacon_video_widget_can_set_zoom),
+	(bacon_video_widget_set_zoom), (bacon_video_widget_get_zoom):
+	  Fix Gst build.
+
 2004-12-04  Bastien Nocera  <hadess@hadess.net>
 
 	* README: upd
